<resources>
    <string name="todo">TODO</string>
    <string name="string_test_short_eng">Test short text</string>
    <string name="string_test_short_rus">Это короткое тестовое сообщение</string>
    <string name="string_test_long_rus">\n
                Ветер весело шумит\n
                Судно весело бежит\n
                Мимо острова Буяна\n
                К царству славного Салтана,\n
                И знакомая страна\n
                Вот уж издали видна.\n
                Вот на берег вышли гости.\n
                Царь Салтан зовет их в гости.\n
                Гости видят: во дворце\n
                Царь сидит в своем венце
    </string>
    <string name="string_test_tags">#Тестовый</string>

    <string name="default_view_text_number">0</string>

    <!--переменные описания-->
    <string name="title_app_name">Рейтинги</string>
    <string name="title_image_desc">Изображение</string>
    <string name="title_activity_add">Новый элемент</string>
    <string name="title_activity_add_tag">Тэги</string>
    <string name="title_activity_edit">Редактирование</string>
    <string name="title_button_add">Добавить</string>
    <string name="title_button_snapshot">Добавить фото</string>
    <string name="title_new">Новый</string>
    <string name="title_delete">Удалить</string>
    <string name="title_edit">Редактировать</string>
    <string name="title_end">Закончить</string>
    <string name="title_tag">#Тэги</string>
    <string name="title_empty">Empty</string>
    <string name="title_set_tag">Установить #ТЭГ</string>
    <string name="title_filtering_tag">Фильтрация по тэгам</string>


    <string name="title_menu_settings">Настройки</string>
    <string name="title_menu_clear_db">Удалить все элементы</string>
    <string name="title_view_text_add">Наименование</string>
    <string name="title_view_text_respect">Оценка</string>

    <string name="action_clear_db">Записи в базе данных удалены</string>
    <string name="action_empty_db">В базе данных нет записей</string>

    <string name="storage_permission_rationale_title">Получение прав на карту</string>
    <string name="storage_permition_rationale_message">Разрешить доступ к карте памяти?</string>
    <string name="storage_permission_denied_message">Доступ к карте памяти отсутствует</string>

</resources>
