<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    app:dragEdge="right"
    app:mode="normal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_delete"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                card_view:cardBackgroundColor="@color/colorListItemDelete"
                card_view:cardCornerRadius="5dp"
                tools:layout_editor_absoluteX="5dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/title_delete"
                    app:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_delete" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_edit"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                card_view:cardBackgroundColor="@color/colorListItemEdit"
                card_view:cardCornerRadius="5dp"
                tools:layout_editor_absoluteX="5dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/title_edit"
                    app:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_edit" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </FrameLayout>

    <!-- Your main layout here -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frame">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            card_view:cardBackgroundColor="@color/colorPrimaryLight"
            card_view:cardCornerRadius="5dp"
            tools:layout_editor_absoluteX="5dp">

            <TextView
                android:id="@+id/view_text_card"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center|start"
                android:padding="5dp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/string_test_short_rus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/view_text_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:padding="5dp"
                android:text="@string/title_empty"
                android:textColor="@color/colorAccent" />

            <at.grabner.circleprogress.CircleProgressView
                android:id="@+id/circle_view_card"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="top|end"
                android:layout_margin="5dp"
                CircleProgressView:cpv_autoTextSize="true"
                CircleProgressView:cpv_barColor="@color/colorAccent"
                CircleProgressView:cpv_barWidth="4dp"
                CircleProgressView:cpv_innerContourSize="0dp"
                CircleProgressView:cpv_maxValue="100"
                CircleProgressView:cpv_outerContourSize="0dp"
                CircleProgressView:cpv_rimColor="@color/colorPrimaryLight"
                CircleProgressView:cpv_rimWidth="4dp"
                CircleProgressView:cpv_seekMode="true"
                CircleProgressView:cpv_showUnit="false"
                CircleProgressView:cpv_spinColor="@color/colorAccent"
                CircleProgressView:cpv_textColor="@color/colorAccent"
                CircleProgressView:cpv_textScale="1"
                CircleProgressView:cpv_value="0" />
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>
