<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/app_bar" />
    </com.google.android.material.appbar.AppBarLayout>

    <at.grabner.circleprogress.CircleProgressView
        android:id="@+id/circle_view_add"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_16dp"
        CircleProgressView:cpv_autoTextSize="true"
        CircleProgressView:cpv_barColor="@color/colorAccent"
        CircleProgressView:cpv_barWidth="8dp"
        CircleProgressView:cpv_innerContourSize="0dp"
        CircleProgressView:cpv_maxValue="100"
        CircleProgressView:cpv_outerContourSize="0dp"
        CircleProgressView:cpv_rimColor="@color/colorPrimaryLight"
        CircleProgressView:cpv_rimWidth="8dp"
        CircleProgressView:cpv_seekMode="true"
        CircleProgressView:cpv_showUnit="false"
        CircleProgressView:cpv_spinColor="@color/colorAccent"
        CircleProgressView:cpv_textColor="@color/colorAccent"
        CircleProgressView:cpv_textScale="1"
        CircleProgressView:cpv_value="0"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@+id/circle_view_add" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spacer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorTextPrimary"
                    android:gravity="center"
                    android:text="@string/title_view_text_add" />

                <EditText
                    android:id="@+id/edit_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:gravity="center|start"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:labelFor="@id/edit_text_title"
                    android:maxLength="15"
                    android:paddingEnd="16dp"
                    android:singleLine="true"
                    tools:targetApi="o" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view_recycler_tags_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    card_view:cardBackgroundColor="@color/colorPrimary"
                    card_view:cardCornerRadius="5dp"
                    tools:layout_editor_absoluteX="5dp">

                    <LinearLayout
                        android:id="@+id/btn_new_tag"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center|end"
                            android:gravity="center_vertical"
                            android:paddingStart="15dp"
                            android:paddingEnd="5dp"
                            android:text="@string/title_set_tag"
                            android:textColor="@android:color/white" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_label"
                            app:tint="@android:color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/view_text_tag_new"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:autofillHints="@string/title_new"
                    android:hint="@string/title_new"
                    android:inputType="textShortMessage"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/view_tag_add_list"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/ic_list"
                    app:tint="?colorPrimary" />

            </LinearLayout>

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/view_simple_image"
                android:layout_width="@dimen/photo_width"
                android:layout_height="@dimen/photo_height"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="8dp"
                app:failureImage="@drawable/ic_error_outline"
                app:failureImageScaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:placeholderImage="@drawable/ic_image"
                app:placeholderImageScaleType="center" />

            <Button
                android:id="@+id/but_snapshot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:text="@string/title_button_snapshot" />

            <Button
                android:id="@+id/but_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="220dp"
                android:text="@string/title_button_add" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>